# deep-student

./: CHANGELOG.md  README.md  README_CN.md  fix-bluetooth-mt7921.ps1  package-lock.json  package.json  verify-bluetooth.ps1  vite.config.ts
.github/: CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: cla.yml  hotfix-linux-release.yml  purge-cache.yml  rebuild-android.yml  release.yml  (+2 more)
docs/: BUILD-CONFIG.md  CODE_STYLE.md  README-BUILD.md  THIRD_PARTY_LICENSES.md
note/: 翻译键缺失详细报告.md
public/: pdf.worker.wrapper.mjs
scripts/: build_all.sh  build_linux_all.sh  build_mac.sh  check-i18n.mjs  check-missing-translations.mjs  generate-version.mjs  model-capability-registry.json  prepare-pdfium-macos.sh  quick-start.bat  simple-test.bat  start-dev.bat  verify-macos-pdfium-bundle.sh
src/: App.tsx  i18n.ts  lazyComponents.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/chat_v2/: V20260302__subagent_task_schema_align.sql  V20260306__add_skill_state_json.sql
src-tauri/migrations/vfs/: V20260302__normalize_folder_items_timestamps.sql  V20260303__add_memory_write_idempotency.sql  V20260304__harden_memory_folder_items_and_audit_indexes.sql  V20260305__add_answer_submission_idempotency.sql  V20260306__canonicalize_folder_item_mounts.sql  V20260308__add_todo_tables.sql  V20260309__decouple_todo_from_vfs.sql  V20260310__add_pomodoro.sql  V20260311__todo_constraints.sql
src-tauri/src/: anr_watchdog.rs  backup_config.rs  commands.rs  config_recovery.rs  crash_logger.rs  debug_log_service.rs  debug_logger.rs  document_parser.rs  enhanced_anki_service.rs  error_details.rs  exam_sheet_service.rs  figure_extractor.rs  file_manager.rs  lib.rs  llm_structurer.rs  notes_exporter.rs  notes_manager.rs  ocr_circuit_breaker.rs  page_rasterizer.rs  pdf_ocr_service.rs  pdf_protocol.rs  pdfium_utils.rs  question_bank_service.rs  question_export_service.rs  question_import_service.rs  question_sync_service.rs  reasoning_policy.rs  review_plan_service.rs  startup_cleanup.rs  streaming_anki_service.rs  textbooks_db.rs  unified_file_manager.rs  vlm_grounding_service.rs
src-tauri/src/adapters/: gemini-openai-converter.rs
src-tauri/src/chat_v2/: context.rs  database.rs  events.rs  mod.rs  pipeline.rs  pipeline_tests.rs  prompt_builder.rs  repo.rs  types.rs  variant_context.rs  vfs_resolver.rs
src-tauri/src/chat_v2/adapters/: llm_adapter.rs  tool_adapter.rs
src-tauri/src/chat_v2/handlers/: block_actions.rs  group_handlers.rs  manage_session.rs  mod.rs  send_message.rs  variant_handlers.rs  workspace_handlers.rs
src-tauri/src/chat_v2/migration/: legacy_migration.rs
src-tauri/src/chat_v2/pipeline/: constants.rs  helpers.rs  history.rs  llm_adapter.rs  multi_variant.rs  persistence.rs  prompt.rs  summary.rs  token_resources.rs  tool_loop.rs  variant_adapter.rs
src-tauri/src/chat_v2/tools/: academic_search_executor.rs  anki_executor.rs  arg_utils.rs  ask_user_executor.rs  attachment_executor.rs  attempt_completion.rs  builtin_resource_executor.rs  builtin_retrieval_executor.rs  canvas_executor.rs  chatanki_executor.rs  docx_executor.rs  executor.rs  executor_registry.rs  fetch_executor.rs  general_executor.rs  knowledge_executor.rs  memory_executor.rs  mod.rs  paper_save_executor.rs  pptx_executor.rs  qbank_executor.rs  session_executor.rs  skills_executor.rs  sleep_executor.rs  subagent_executor.rs  template_executor.rs  todo_executor.rs  user_todo_executor.rs  workspace_executor.rs  xlsx_executor.rs
src-tauri/src/chat_v2/workspace/: coordinator.rs  database.rs  sleep_manager.rs
src-tauri/src/cloud_storage/: config.rs  mod.rs  sync_manager.rs  webdav.rs
src-tauri/src/cmd/: anki_connect.rs  notes.rs  ocr.rs  textbooks.rs  translation.rs
src-tauri/src/crypto/: backup_crypto.rs  mod.rs  tests.rs
src-tauri/src/data_governance/: commands.rs  commands_asset.rs  commands_backup.rs  commands_restore.rs  commands_sync.rs  commands_types.rs  commands_zip.rs  mod.rs
src-tauri/src/data_governance/backup/: assets.rs  mod.rs  zip_export.rs
src-tauri/src/data_governance/dto/: mod.rs
src-tauri/src/data_governance/migration/: chat_v2.rs  coordinator.rs  vfs.rs
src-tauri/src/data_governance/sync/: mod.rs
src-tauri/src/database/: manager.rs  mod.rs
src-tauri/src/dstu/: handlers.rs  mod.rs  trash_handlers.rs  types.rs
src-tauri/src/dstu/export/: essay_adapter.rs  exam_adapter.rs  file_adapter.rs  image_adapter.rs  mindmap_adapter.rs  mod.rs  note_adapter.rs  textbook_adapter.rs  translation_adapter.rs
src-tauri/src/dstu/handler_utils/: content_helpers.rs  crud.rs  delete_helpers.rs  list_helpers.rs  mod.rs  node_converters.rs  path_utils.rs  search_helpers.rs
src-tauri/src/essay_grading/: mod.rs  pipeline.rs  text_stats.rs  types.rs
src-tauri/src/llm_manager/: builtin_vendors.rs  exam_engine.rs  mod.rs  model2_pipeline.rs
src-tauri/src/llm_manager/adapters/: gemini.rs  mod.rs  qwen.rs  zhipu.rs
src-tauri/src/mcp/: client.rs  global.rs  stdio_proxy.rs
src-tauri/src/memory/: auto_extractor.rs  category_manager.rs  compressor.rs  config.rs  evolution.rs  handlers.rs  mod.rs  reranker.rs  service.rs
src-tauri/src/multimodal/: embedding_chunker.rs  page_indexer.rs  vector_store.rs
src-tauri/src/ocr_adapters/: factory.rs  paddle.rs
src-tauri/src/ocr_adapters/system_ocr/: macos.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/qbank_grading/: pipeline.rs
src-tauri/src/tools/: mod.rs  web_search.rs
src-tauri/src/translation/: pipeline.rs
src-tauri/src/utils/: fetch.rs
src-tauri/src/vendors/: siliconflow.rs
src-tauri/src/vfs/: handlers.rs  index_handlers.rs  index_service.rs  indexing.rs  lance_store.rs  mod.rs  multimodal_service.rs  ocr_utils.rs  pdf_processing_service.rs  ref_handlers.rs  todo_handlers.rs  types.rs
src-tauri/src/vfs/repos/: attachment_repo.rs  essay_repo.rs  exam_repo.rs  file_repo.rs  folder_repo.rs  mod.rs  note_repo.rs  path_cache_repo.rs  pomodoro_repo.rs  question_repo.rs  textbook_repo.rs  todo_repo.rs  translation_repo.rs
src-tauri/tests/: migration_tests.rs
(+297 files in other folders)
